Add updateUser service
